test/compiler_errors/misspelled-attributes.lzx
<canvas>

  <!-- check misspelled attribute name -->
  <view x="100" y="100" height="200" width="200" BGcolor="red"/>

</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2004 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
